# Numerical_Methods

./: .ci-script.yml  CMakeLists.txt  README.md
.github/workflows/: ci_script.yml  cmake.yml
Deploy/: CMakeLists.txt  scalarIVP.cpp
Tests/: CMakeLists.txt  CUmatFunTest.cu  Problem_6_2.cpp  batch_run.sh  matFunTest.cpp  matrixTest.cpp  test_RK_order.py  vectorIVP.cpp
src/: Matrix.cpp  Matrix.hpp  MatrixFunctions.cpp  MatrixFunctions.hpp  Tableaus.cpp  Tableaus.hpp  TimeIntegration.cpp  TimeIntegration.hpp  Vector.cpp  Vector.hpp  main.cpp  phi.h
